libs/image/kis_image.cc
@@ -598,7 +598,6 @@ void KisImage::aboutToRemoveANode(KisNode *parent, int index)
 void KisImage::nodeChanged(KisNode* node)
 {
     KisNodeGraphListener::nodeChanged(node);
-    requestStrokeEnd();
     m_d->signalRouter.emitNodeChanged(node);
 }
 
